removes RUN command

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,12 +4,7 @@ FROM python:3.10-slim
 # 2. Set the working directory inside the container to /app
 WORKDIR /app
 
-# 3. Install system dependencies required for OpenCV
-# (OpenCV needs some video libraries that aren't in the basic Python image)
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    libgl1-mesa-glx \
-    libglib2.0-0 \
-    && rm -rf /var/lib/apt/lists/*
+# (DELETED THE APT-GET BLOCK HERE)
 
 # 4. Copy the "Shopping List" and install ingredients
 COPY requirements.txt .
@@ -19,5 +14,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # 6. The command to start the server
-# host 0.0.0.0 is crucial! It tells Docker to accept connections from outside.
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
